# libev-couchbase-example

./: README.markdown
step1/: .gitignore  Makefile  Makefile.am  configure.ac  server.c
step2/: Makefile.am  common.h  config_static.h  configure.ac  server.c  storage.c  storage.h
step2/lcb-plugin/: libev_io_opts.h  plugin-libev.c
step2/ringbuffer/: ringbuffer.c  ringbuffer.h
